[package]
name = "oven"
version = "0.4.0"
authors = ["XMPPwocky <nttheis@gmail.com>", "Markus Kohlhase <mail@markus-kohlhase.de>"]
repository = "https://github.com/flosse/oven"
description = "Simple cookie management for Iron"
license = "MIT"

[dependencies]
iron = "0.5.1"
plugin = "0.2.6"

[dependencies.cookie]
version = "0.8"
features = ["secure"]
